--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,12 @@ buildscript {
         paging_version = "3.1.1"
         coilVersion = "2.2.2"
         lifecycleVersion = "2.6.1"
+        googleVersion = "4.3.15"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltLibVersion"
+        classpath "com.google.gms:google-services:$googleVersion"
     }
 }
 
