Add Google SignIn option to connect with Google Account

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
     implementation 'com.google.firebase:firebase-auth-ktx:21.3.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.5.0'
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
     //room
     implementation "androidx.room:room-runtime:$roomVersion"
