--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         googleVersion = "4.3.15"
     }
     dependencies {
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltLibVersion"
         classpath "com.google.gms:google-services:$googleVersion"
     }
