Add back to ticket information page and other payment page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ android {
     kotlinOptions {
         jvmTarget = '17'
         freeCompilerArgs += [
-                "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi"
+                "-opt-in=kotlinx.coroutines.ExperimentalCoroutinesApi",
+                "-opt-in=SetTextI18n",
         ]
     }
 }
