--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <data android:scheme="http" />
                 <data android:scheme="https" />
 
-                <data android:host="fr.event.eventify://paypalpay" />
+                <data android:host="${applicationId}://paypalpay" />
             </intent-filter>
 
         </activity>
